Update projects.html with new content and structure

--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects | Phumza Sotyantya</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 
 <body>
@@ -15,29 +16,29 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Me</a></li>
+        <li><a href="experience-cert.html">Experience + Skills</a></li>
         <li><a href="beyond.html">Beyond the Code</a></li>
         <li><a href="projects.html" class="active">Projects</a></li>
-        <li><a href="experience-cert.html">Experience + Skills</a></li>
         <li><a href="contact.html">Resume + Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <main class="content-container">
-    <!-- ====== INTRO ====== -->
+    <!-- ====== HERO ====== -->
     <section class="hero fade-in">
       <h2>Projects & Innovation</h2>
       <p class="tagline">
-        A selection of projects that reflect my passion for accessibility, innovation, and real-world problem solving — built using a mix of AI, software development, and user-centered design.
+        A selection of projects reflecting my passion for accessibility, innovation, and real-world problem solving — built using a mix of AI, software development, and user-centered design.
       </p>
       <blockquote><strong>“Innovation isn’t about what we can build — it’s about who we build it for.”</strong></blockquote>
     </section>
 
     <!-- ====== PROJECTS GRID ====== -->
-    <section class="projects-grid fade-in">
+    <section class="cards-grid fade-in">
 
       <!-- Accessibility Tool -->
-      <div class="card">
+      <div class="card fade-in">
         <iframe src="https://www.youtube.com/embed/57-Mm3HstZc" frameborder="0" allowfullscreen></iframe>
         <h3>Accessibility Tool</h3>
         <p>AI solution designed to enhance accessibility for users with disabilities — leveraging voice and visual recognition technology.</p>
@@ -51,7 +52,7 @@
       </div>
 
       <!-- Sentiment Dashboard -->
-      <div class="card">
+      <div class="card fade-in">
         <img src="assets/sentimental.PNG" alt="Sentiment Analysis Dashboard">
         <h3>Sentiment Analysis Dashboard</h3>
         <p>Real-time social sentiment analysis dashboard powered by Hugging Face models and Streamlit visualization.</p>
@@ -64,7 +65,7 @@
       </div>
 
       <!-- COMPAS Bias Audit -->
-      <div class="card">
+      <div class="card fade-in">
         <img src="assets/Bias Audit.PNG" alt="COMPAS Bias Audit">
         <h3>COMPAS Bias Audit</h3>
         <p>Auditing fairness in AI-based criminal justice algorithms to address data bias and promote transparency. Team project: <em>The Elements</em>.</p>
@@ -77,7 +78,7 @@
       </div>
 
       <!-- Flashcard App -->
-      <div class="card">
+      <div class="card fade-in">
         <iframe src="https://www.youtube.com/embed/IFbqXimVjhA" frameborder="0" allowfullscreen></iframe>
         <h3>Flashcard App</h3>
         <p>Android app for studying with custom flashcards, built using Java and SQLite for offline accessibility.</p>
@@ -91,7 +92,7 @@
       </div>
 
       <!-- Education Sector AI Prototype -->
-      <div class="card">
+      <div class="card fade-in">
         <iframe src="https://www.youtube.com/embed/HfF3JSBga3k" frameborder="0" allowfullscreen></iframe>
         <h3>Education Sector AI Prototype</h3>
         <p>AI-powered prototype created to streamline learning and resource management for students and educators.</p>
@@ -101,7 +102,7 @@
       </div>
 
       <!-- Image Content Generator -->
-      <div class="card">
+      <div class="card fade-in">
         <img src="assets/Image Generator.PNG" alt="Image Content Generator">
         <h3>Image Content Generator</h3>
         <p>AI tool that generates captions and descriptions for images using Gradio and Hugging Face Spaces.</p>
@@ -115,7 +116,7 @@
       </div>
 
       <!-- Resume Maker -->
-      <div class="card">
+      <div class="card fade-in">
         <img src="assets/resume maker.PNG" alt="Resume Maker">
         <h3>PS Resume Maker</h3>
         <p>Smart resume generator that produces ATS-optimized templates using AI-powered text structuring.</p>
@@ -128,7 +129,7 @@
       </div>
 
       <!-- AI Chatbot -->
-      <div class="card">
+      <div class="card fade-in">
         <img src="assets/chatbot.PNG" alt="AI Chatbot">
         <h3>AI Concept Chatbot</h3>
         <p>Conversational chatbot designed for educational engagement, built on Botpress with adaptive responses.</p>
