Revise header and certification details in HTML
Updated header and certification entries for consistency and clarity.

--- a/certifications.html
+++ b/certifications.html
@@ -5,45 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Certifications | Phumza Sotyantya</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
+  <!-- ====== HEADER ====== -->
   <header>
-    <h1>My Certifications</h1>
+    <h1>Phumza Sotyantya</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Me</a>
-      <a href="skills.html">Skills</a>
-      <a href="projects.html">Projects</a>
-      <a href="beyond.html">Beyond the Code</a>
-      <a href="certifications.html" class="active">Certifications</a>
-      <a href="contact.html">Resume + Contact</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="experience-cert.html">Experience + Skills</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="beyond.html">Beyond the Code</a></li>
+        <li><a href="certifications.html" class="active">Certifications</a></li>
+        <li><a href="contact.html">Resume + Contact</a></li>
+      </ul>
     </nav>
   </header>
 
+  <!-- ====== MAIN CONTENT ====== -->
   <main class="content-container">
-    <h2>Professional Certifications</h2>
-    <div class="certifications-grid">
+    <section class="hero fade-in">
+      <h2>Professional Certifications</h2>
+      <p class="tagline">A showcase of my professional achievements and industry-recognized certifications.</p>
+    </section>
+
+    <section class="certifications-grid fade-in">
       <div class="cert-card">
-        <p><strong>Microsoft Certified:</strong> Azure Fundamentals</p>
+        <h4>Microsoft Certified: Azure Fundamentals</h4>
         <a href="#" target="_blank">View Credential</a>
       </div>
       <div class="cert-card">
-        <p><strong>IBM AI Engineering</strong> (Coursera)</p>
+        <h4>IBM AI Engineering (Coursera)</h4>
         <a href="#" target="_blank">View Credential</a>
       </div>
       <div class="cert-card">
-        <p><strong>Google Data Analytics</strong> (Coursera)</p>
+        <h4>Google Data Analytics (Coursera)</h4>
         <a href="#" target="_blank">View Credential</a>
       </div>
       <div class="cert-card">
-        <p><strong>Responsive Web Design</strong> (freeCodeCamp)</p>
+        <h4>Responsive Web Design (freeCodeCamp)</h4>
         <a href="#" target="_blank">View Credential</a>
       </div>
       <div class="cert-card">
-        <p><strong>Introduction to Cloud Computing</strong> (IBM)</p>
+        <h4>Introduction to Cloud Computing (IBM)</h4>
         <a href="#" target="_blank">View Credential</a>
       </div>
-    </div>
+    </section>
+
+    <section class="cta-section fade-in" style="text-align:center; padding:3rem 0;">
+      <a href="contact.html" class="cv-button">Get in Touch</a>
+    </section>
   </main>
 
   <footer>
