Update header and content in beyond.html

--- a/beyond.html
+++ b/beyond.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Beyond the Code | Phumza Sotyantya</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
   <!-- ====== HEADER ====== -->
   <header>
-    <h1>Beyond the Code</h1>
+    <h1>Phumza Sotyantya</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -23,11 +24,13 @@
   </header>
 
   <main class="content-container">
+    <!-- ====== HERO ====== -->
     <section class="hero fade-in">
       <h2>Life Beyond the Code</h2>
-      <p>In addition to my work in technology, I serve as a Youth Leader at <strong>TSA.</strong>. This role has provided me with meaningful leadership and community engagement experiences.</p>
+      <p>In addition to my work in technology, I serve as a Youth Leader at <strong>TSA</strong>. This role has provided me with meaningful leadership and community engagement experiences.</p>
     </section>
 
+    <!-- ====== COMMUNITY & ACTIVITIES ====== -->
     <section class="cards-grid fade-in">
       <div class="card">
         <img src="assets/LocalOfficers Workshop.jpg" alt="Local Officers Workshop">
@@ -48,13 +51,18 @@
       </div>
 
       <div class="card">
-        <img src="assets/youngWomen f.jpg" alt="Young Women">
+        <img src="assets/youngWomen f.jpg" alt="Young Women Community Outreach">
         <h3>Community Outreach</h3>
-        <p>As part of a young women's group, I was part of a community outreach initiative to support those in need through acts of kindness and practical assistance.</p>
+        <p>As part of a young women's group, I participated in a community outreach initiative to support those in need through acts of kindness and practical assistance.</p>
         <div class="links">
           <a href="https://www.facebook.com/100066607274501/posts/1018439620386271/" target="_blank" rel="noopener noreferrer">View Post</a>
         </div>
       </div>
+    </section>
+
+    <!-- ====== CTA ====== -->
+    <section class="cta-section fade-in" style="text-align:center; padding:3rem 0;">
+      <a href="contact.html" class="cv-button">Connect With Me</a>
     </section>
   </main>
 
