Update contact page with new header and sections

--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact | Phumza Sotyantya</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
   <!-- ====== HEADER ====== -->
   <header>
-    <h1>Contact Me</h1>
+    <h1>Phumza Sotyantya</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -23,22 +24,24 @@
   </header>
 
   <main class="content-container">
-    <section class="download-cv-section" style="text-align:center; margin-top:2rem;">
+    <!-- ====== DOWNLOAD CV ====== -->
+    <section class="cta-section fade-in" style="text-align:center; margin-top:2rem;">
       <a href="https://melinda-ps.github.io/phumza-portfolio/assets/Melinda.pdf" class="cv-button" download>
         Download My CV
       </a>
     </section>
 
-    <section class="contact-info">
+    <!-- ====== CONTACT INFO ====== -->
+    <section class="contact-info fade-in" style="text-align:center; margin-top:3rem;">
       <h2>Contact Information</h2>
 
-      <div class="linkedin-qr" style="text-align:center; margin-top:1rem;">
+      <div class="linkedin-qr" style="margin-top:1rem;">
         <a href="https://za.linkedin.com/in/phumza-sotyantya-44929427a" target="_blank" rel="noopener noreferrer">
           <img src="assets/linkedin_qr.png" alt="LinkedIn QR Code" class="qr-image" style="width:150px; height:150px; border-radius:12px;">
         </a>
       </div>
 
-      <p style="text-align:center; margin-top:1rem;">
+      <p style="margin-top:1rem;">
         LinkedIn: <a href="https://za.linkedin.com/in/phumza-sotyantya-44929427a" target="_blank" rel="noopener noreferrer">View My LinkedIn</a>
       </p>
     </section>
