Refactor beyond.html to include new sections

--- a/beyond.html
+++ b/beyond.html
@@ -1,73 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Beyond the Code | Phumza Sotyantya</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-</head>
-<body>
-  <!-- ====== HEADER ====== -->
-  <header>
-    <h1>Phumza Sotyantya</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="beyond.html" class="active">Beyond the Code</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="experience-cert.html">Experience + Skills</a></li>
-        <li><a href="contact.html">Resume + Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+<!-- ====== LIFE OUTSIDE IT GRID ====== -->
+<section class="cards-grid fade-in">
 
-  <main class="content-container">
-    <!-- ====== HERO ====== -->
-    <section class="hero fade-in">
-      <h2>Life Beyond the Code</h2>
-      <p>In addition to my work in technology, I serve as a Youth Leader at <strong>TSA</strong>. This role has provided me with meaningful leadership and community engagement experiences.</p>
-    </section>
+  <!-- Hiking -->
+  <div class="card">
+    <img src="assets/hiking.jpg" alt="Hiking Adventure">
+    <h3>Hiking & Outdoors</h3>
+    <p>Exploring trails and staying active — nature is my reset button.</p>
+  </div>
 
-    <!-- ====== COMMUNITY & ACTIVITIES ====== -->
-    <section class="cards-grid fade-in">
-      <div class="card">
-        <img src="assets/LocalOfficers Workshop.jpg" alt="Local Officers Workshop">
-        <h3>Local Officers Workshop</h3>
-        <p>I attended a local officers workshop, gaining leadership and service insights within the church community.</p>
-        <div class="links">
-          <a href="https://www.facebook.com/100066607274501/posts/997186049178295/" target="_blank" rel="noopener noreferrer">View Post</a>
+  <!-- Books -->
+  <div class="card">
+    <img src="assets/bookstores.jpg" alt="Bookstore / Reading">
+    <h3>Books & Learning</h3>
+    <p>Passionate reader — always hunting for new stories and knowledge in bookstores or online.</p>
+  </div>
+
+  <!-- Running -->
+  <div class="card">
+    <img src="assets/race.jpg" alt="Running Event">
+    <h3>Running & Fitness</h3>
+    <p>After the finish line! Running keeps me disciplined and energized.</p>
+  </div>
+
+  <!-- Church 1 -->
+  <div class="card">
+    <img src="assets/LocalOfficers Workshop.jpg" alt="Local Officers Workshop">
+    <h3>Church Leadership</h3>
+    <p>Participated in workshops, learning leadership and service within the community.</p>
+     </div>
+
+  <!-- Church 2 -->
+  <div class="card">
+    <img src="assets/Bible Study Session.jpg" alt="Bible Study Session">
+    <h3>Faith & Mentorship</h3>
+    <p>Leading sessions focused on empowering young people through faith and guidance.</p>
         </div>
-      </div>
 
-      <div class="card">
-        <img src="assets/Bible Study Session.jpg" alt="Bible Study Session">
-        <h3>Bible Study Session</h3>
-        <p>Leading a session focused on empowering young people through faith and community support.</p>
-        <div class="links">
-          <a href="https://www.facebook.com/100066607274501/posts/1016780240552209/" target="_blank" rel="noopener noreferrer">View Post</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <img src="assets/youngWomen f.jpg" alt="Young Women Community Outreach">
-        <h3>Community Outreach</h3>
-        <p>As part of a young women's group, I participated in a community outreach initiative to support those in need through acts of kindness and practical assistance.</p>
-        <div class="links">
-          <a href="https://www.facebook.com/100066607274501/posts/1018439620386271/" target="_blank" rel="noopener noreferrer">View Post</a>
-        </div>
-      </div>
-    </section>
-
-    <!-- ====== CTA ====== -->
-    <section class="cta-section fade-in" style="text-align:center; padding:3rem 0;">
-      <a href="contact.html" class="cv-button">Connect With Me</a>
-    </section>
-  </main>
-
-  <footer>
-    © 2025 Phumza Sotyantya
-  </footer>
-</body>
-</html>
+</section>
