--- a/about.html
+++ b/about.html
@@ -25,21 +25,36 @@
   </header>
 
   <!-- HERO -->
-  <section class="hero fade-in">
-    <h2>About Me</h2>
-    <p class="tagline">
-      I’m a <strong>Systems Development Graduate</strong> dedicated to using technology to empower communities and create inclusive digital solutions.
-    </p>
+  <section class="hero about-hero fade-in">
+
+    <div class="hero-text">
+      <h2>About Me</h2>
+      <p class="tagline">
+        I’m a <strong>Systems Development Graduate</strong> dedicated to using technology to empower communities and create inclusive digital solutions.
+      </p>
+    </div>
+
+    <div class="hero-image">
+      <img 
+        src="assets/image_f275c45c.png" 
+        alt="Portrait illustration ">
+    </div>
+
   </section>
 
   <!-- ABOUT CONTENT -->
   <section class="content-section fade-in">
     <div class="card">
       <p>
-        With a background in <strong>Systems Development, Peer Advising, and IT Support</strong>, I’ve combined academic knowledge with real-world experience to design solutions that are both practical and people-centered.
+        Systems Development graduate from Boston City Campus with experience in IT Support and exposure to information systems within a university environment. I completed practical training as an ICT Intern at Nelson Mandela University (Information & Systems Development).
       </p>
+
       <p>
-        My passion lies in <strong>problem-solving, accessibility, and innovation</strong> — creating systems and tools that make a meaningful difference in how people connect with technology.
+        I enjoy understanding how systems work, documenting processes, researching solutions, and analysing technical challenges. My interests include supporting users, improving workflows, and contributing through research, documentation, and collaboration.
+      </p>
+
+      <p>
+        I work well in team-oriented environments, value mentorship and continuous learning, and aim to grow within technology roles where problem-solving, analysis, and structured thinking are key.
       </p>
     </div>
   </section>
@@ -49,15 +64,17 @@
     <h3>Quick Facts</h3>
     <ul>
       <li>📍 Based in Eastern Cape, South Africa</li>
-      <li>🎓 Diploma in Systems Development – Boston City Campus</li>
+      <li>🎓 Diploma in Systems Development – Boston City Campus (Modules included: A+, Security+)</li>
       <li>💻 Experience in IT Support and Peer Advising</li>
       <li>🌟 Cisco, Microsoft, and Coursera Certified</li>
     </ul>
   </section>
 
   <!-- CTA -->
-  <section class="contact-cta fade-in" style="padding: 2rem; text-align: center;">
-    <a href="experience-cert.html" class="cv-button">See My Experience & Certifications</a>
+  <section class="contact-cta fade-in" style="padding: 2rem; text-align:center;">
+    <a href="experience-cert.html" class="cv-button">
+      See My Experience & Certifications
+    </a>
   </section>
 
   <!-- FOOTER -->
