Refactor beyond.html structure and content

--- a/beyond.html
+++ b/beyond.html
@@ -1,39 +1,85 @@
-<!-- ====== LIFE OUTSIDE IT GRID ====== -->
-<section class="cards-grid fade-in">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Beyond the Code | Phumza Sotyantya</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <!-- HEADER -->
+  <header>
+    <h1>Phumza Sotyantya</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="beyond.html" class="active">Beyond the Code</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="experience-cert.html">Experience + Skills</a></li>
+        <li><a href="contact.html">Resume + Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <!-- Hiking -->
-  <div class="card">
-    <img src="assets/hiking.jpg" alt="Hiking Adventure">
-    <h3>Hiking & Outdoors</h3>
-    <p>Exploring trails and staying active — nature is my reset button.</p>
-  </div>
+  <!-- HERO -->
+  <main class="content-container">
+    <section class="hero fade-in">
+      <h2>Life Beyond the Code</h2>
+      <p>
+        Here's a glimpse of what I enjoy outside IT — from adventure and fitness to reading and community engagement.
+      </p>
+    </section>
 
-  <!-- Books -->
-  <div class="card">
-    <img src="assets/bookstores.jpg" alt="Bookstore / Reading">
-    <h3>Books & Learning</h3>
-    <p>Passionate reader — always hunting for new stories and knowledge in bookstores or online.</p>
-  </div>
+    <!-- LIFE OUTSIDE IT GRID -->
+    <section class="cards-grid fade-in">
 
-  <!-- Running -->
-  <div class="card">
-    <img src="assets/race.jpg" alt="Running Event">
-    <h3>Running & Fitness</h3>
-    <p>After the finish line! Running keeps me disciplined and energized.</p>
-  </div>
+      <!-- Hiking -->
+      <div class="card">
+        <img src="assets/hiking.jpg" alt="Hiking Adventure">
+        <h3>Hiking & Outdoors</h3>
+        <p>Exploring trails and staying active — nature is my reset button.</p>
+      </div>
 
-  <!-- Church 1 -->
-  <div class="card">
-    <img src="assets/LocalOfficers Workshop.jpg" alt="Local Officers Workshop">
-    <h3>Church Leadership</h3>
-    <p>Participated in workshops, learning leadership and service within the community.</p>
-     </div>
+      <!-- Books -->
+      <div class="card">
+        <img src="assets/bookstores.jpg" alt="Bookstore / Reading">
+        <h3>Books & Learning</h3>
+        <p>Passionate reader — always hunting for new stories and knowledge in bookstores or online.</p>
+      </div>
 
-  <!-- Church 2 -->
-  <div class="card">
-    <img src="assets/Bible Study Session.jpg" alt="Bible Study Session">
-    <h3>Faith & Mentorship</h3>
-    <p>Leading sessions focused on empowering young people through faith and guidance.</p>
-        </div>
+      <!-- Running -->
+      <div class="card">
+        <img src="assets/race.jpg" alt="Running Event">
+        <h3>Running & Fitness</h3>
+        <p>After the finish line! Running keeps me disciplined and energized.</p>
+      </div>
 
-</section>
+      <!-- Church 1 -->
+      <div class="card">
+        <img src="assets/LocalOfficers Workshop.jpg" alt="Local Officers Workshop">
+        <h3>Church Leadership</h3>
+        <p>Participated in workshops, learning leadership and service within the community.</p>
+      </div>
+
+      <!-- Church 2 -->
+      <div class="card">
+        <img src="assets/Bible Study Session.jpg" alt="Bible Study Session">
+        <h3>Faith & Mentorship</h3>
+        <p>Leading sessions focused on empowering young people through faith and guidance.</p>
+      </div>
+
+    </section>
+
+    <!-- CTA -->
+    <section class="cta-section fade-in" style="text-align:center; padding:3rem 0;">
+      <a href="contact.html" class="cv-button">Connect With Me</a>
+    </section>
+  </main>
+
+  <footer>
+    © 2025 Phumza Sotyantya
+  </footer>
+</body>
+</html>
