--- a/index.html
+++ b/index.html
@@ -2,86 +2,51 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Phumza Sotyantya | Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Home | Phumza Sotyantya</title>
   <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
 
-  <!-- NAVIGATION -->
-  <header class="navbar">
-    <h1 class="logo">Phumza Sotyantya</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="experience-cert.html">Skills</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <h1>Phumza Sotyantya</h1>
+  <div class="nav-toggle" onclick="toggleNav(this)">
+    <span></span><span></span><span></span>
+  </div>
+  <nav class="nav-links">
+    <a href="index.html" class="active">Home</a>
+    <a href="about.html">About</a>
+    <a href="beyond.html">Beyond</a>
+    <a href="projects.html">Projects</a>
+    <a href="experience-cert.html">Experience</a>
+    <a href="skills.html">Skills</a>
+    <a href="certifications.html">Certifications</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-  <!-- HERO -->
-  <section class="hero">
-    <h2 class="fade-in">Systems Development Graduate & IT Support Specialist</h2>
-    <p class="tagline fade-in">Helping people and institutions through practical technology solutions.</p>
-    <blockquote class="fade-in">“Innovation isn’t about what we can build — it’s about who we build it for.”</blockquote>
-    <div class="hero-buttons fade-in">
-      <a href="projects.html" class="cv-button">View Projects</a>
-      <a href="contact.html" class="cv-button">Contact Me</a>
-    </div>
-  </section>
-
-  <!-- FEATURED PROJECTS -->
-  <section class="projects-preview">
-    <h3>Featured Projects</h3>
-    <div class="projects-grid">
-      <div class="card fade-in">
-        <h4>Device Deployment Support</h4>
-        <p>Supported university device rollout and setup processes.</p>
-      </div>
-      <div class="card fade-in">
-        <h4>Graduation Ticketing System</h4>
-        <p>Assisted system operations and user support services.</p>
-      </div>
-      <div class="card fade-in">
-        <h4>AI Learning Projects</h4>
-        <p>Exploring AI tools and digital solutions.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- SKILLS -->
-  <section class="skills-preview">
-    <h3>Core Skills</h3>
-    <div class="skills fade-in">
-      <span>ICT Support</span>
-      <span>Troubleshooting</span>
-      <span>SQL</span>
-      <span>Device Setup</span>
-      <span>Documentation</span>
-      <span>Microsoft Office</span>
-    </div>
-  </section>
-
-  <!-- ABOUT PREVIEW -->
-  <section class="about-preview fade-in">
-    <p>Systems Development graduate completing workplace experience at Nelson Mandela University. Passionate about accessible technology and problem solving.</p>
+<main class="hero fade-in">
+  <div class="hero-text">
+    <h2>Welcome to My Portfolio</h2>
+    <p class="tagline">I’m a <strong>Systems Development Graduate</strong> passionate about building tech solutions that empower people and communities.</p>
     <a href="about.html" class="cv-button">Learn More About Me</a>
-  </section>
+  </div>
+  <div class="hero-image">
+    <img src="assets/image_f275c45c.png" alt="Phumza avatar">
+  </div>
+</main>
 
-  <!-- CONTACT CTA -->
-  <section class="contact-cta fade-in">
-    <h3>Let’s Work Together</h3>
-    <a href="contact.html" class="cv-button">Get In Touch</a>
-  </section>
+<footer>
+  © 2025 Phumza Sotyantya
+</footer>
 
-  <!-- FOOTER -->
-  <footer>
-    © 2025 Phumza Sotyantya
-  </footer>
+<script>
+function toggleNav(toggle) {
+  document.querySelector('.nav-links').classList.toggle('show');
+  toggle.classList.toggle('open');
+}
+</script>
 
 </body>
 </html>
